# extensions-OpenGLPostProcessEffects

./: CMakeLists.txt  OpenGLPostProcessEffects.dist  Setup.cmake
Scene/: BlurPostProcessNode.cpp  BlurPostProcessNode.h  ChainPostProcessNode.cpp  ChainPostProcessNode.h  CompositePostProcessNode.cpp  CompositePostProcessNode.h  DepthOfFieldNode.cpp  DepthOfFieldNode.h  PointWaveNode.cpp  PointWaveNode.h  UnderwaterPostProcessNode.cpp  UnderwaterPostProcessNode.h
shaders/: Chocolux.glsl  Chocolux.glsl.frag  Chocolux.glsl.vert  DepthOfField.glsl  DepthOfField.glsl.frag  EdgeDetection.glsl  EdgeDetection.glsl.frag  FilmGrain.frag  FilmGrain.glsl  Glow.frag  Glow.glsl  GrayScale.frag  GrayScale.glsl  HorizontalBoxBlur.frag  HorizontalBoxBlur.glsl  HorizontalDepthOfField.frag  MotionBlur.frag  MotionBlur.glsl  NormalMap.frag  NormalMap.glsl  Pixelate.glsl  Pixelate.glsl.frag  PointWave.glsl  PointWave.glsl.frag  Underwater.frag  Underwater.glsl  VerticalBoxBlur.frag  VerticalBoxBlur.glsl  VerticalDepthOfField.frag  ViewMotionBlur.glsl  ViewMotionBlur.glsl.frag  VolumetricScattering.glsl  VolumetricScattering.glsl.frag  Wobble.glsl  Wobble.glsl.frag
