
# Create the extension library
ADD_LIBRARY(Extensions_OpenGLPostProcessEffects
  Scene/ChainPostProcessNode.h
  Scene/ChainPostProcessNode.cpp
  Scene/UnderwaterPostProcessNode.h
  Scene/UnderwaterPostProcessNode.cpp
  Scene/DepthOfFieldNode.h
  Scene/DepthOfFieldNode.cpp
  Scene/PointWaveNode.h
  Scene/PointWaveNode.cpp
)
